--- a/results_growth.Rmd
+++ b/results_growth.Rmd
@@ -28,11 +28,11 @@ source("scripts/functions.R")
 
 
 ```{r, echo=FALSE, message=FALSE}
-plot((total_weight~PropH), SummaryInd, col=col.spp[as.factor(species)],pch=16,log="y")
+plot((total_weight~prop_maxH), SummaryInd, col=col.spp[as.factor(species)],pch=16,log="y")
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 
 yvar <- "total_weight"
-xvar <- "PropH"
+xvar <- "prop_maxH"
 
 data <- SummaryInd
 data <- split(data, data$species)
@@ -62,14 +62,14 @@ for(spp in names(data)) {
  
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.1,0.3,.5,0.2), mai=c(1.1,1,.1,0.2))
-plot((GrowthInv~PropH), SummaryInd, log="y", col=col.spp[as.factor(species)],pch=16)
+plot((GrowthInv~prop_maxH), SummaryInd, log="y", col=col.spp[as.factor(species)],pch=16)
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 
-plot(GrowthInv~PropH, SummaryInd, log="y", col=col.age[as.factor(age)],pch=16)
+plot(GrowthInv~prop_maxH, SummaryInd, log="y", col=col.age[as.factor(age)],pch=16)
 legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
 
 yvar <- "GrowthInv"
-xvar <- "PropH"
+xvar <- "prop_maxH"
 
 data <- SummaryInd
 data <- split(data, data$species)
@@ -102,7 +102,7 @@ for(spp in names(data)) {
 
 ```{r, echo=FALSE, message=FALSE}
 yvar <- "RGR"
-xvar <- "PropH"
+xvar <- "prop_maxH"
 
 data <- SummaryInd
 data <- split(data, data$species)
@@ -137,9 +137,9 @@ legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
 TO DO: species should be a random effect for these stats- I want to know the effect of age on the relationship once the effect of species has been accounted for  
 
 ```{r, echo=FALSE,message=FALSE}
-plot(change_shoot_area~change_basal_area,SummaryInd, log="xy",col=col.age[as.factor(age)], pch=16, cex=.8,xlab="change in basal stem area",ylab="change in shoot area")
+plot(growth_shoot_area~growth_stem_area,SummaryInd, log="xy",col=col.age[as.factor(age)], pch=16, cex=.8,xlab="change in basal stem area",ylab="change in shoot area")
 legend("bottomright",col=col.age, labels.age, pch=16, cex=1,bty="n")
-mod <- lm(change_shoot_area~change_basal_area*age*species,SummaryInd)
+mod <- lm(growth_shoot_area~growth_stem_area*age*species,SummaryInd)
 anova(mod)
 ``` 
 
@@ -181,10 +181,10 @@ for(spp in names(data)) {
 - These numbers are currently incomplete - waiting for full set of "leaf weight" numbers to finalize this  
 
 ```{r, echo=FALSE,message=FALSE}
-plot(total_leaf_weight~total_weight,SummaryInd, log="xy",col=col.age[as.factor(age)], pch=16, cex=0.8)
+plot(leaf_weight~total_weight,SummaryInd, log="xy",col=col.age[as.factor(age)], pch=16, cex=0.8)
 legend("bottomright",col=col.age, labels.age, pch=16, cex=1, bty="n")
 
-plot(total_leaf_weight~total_weight,SummaryInd, log="xy",col=col.spp[as.factor(species)], pch=16, cex=0.8)
+plot(leaf_weight~total_weight,SummaryInd, log="xy",col=col.spp[as.factor(species)], pch=16, cex=0.8)
 legend("bottomright",col=col.spp, labels.spp, pch=16, cex=.8, bty="n")
 ```
 
@@ -227,25 +227,25 @@ for(spp in names(data)) {
 - Instead, each shoot matters ever less to the overall increase in basal area in larger plants
 - NOTE: Plots not correct right now - wrong number of points in some and definitely wrong coloring by age
 ```{r, echo=FALSE,message=FALSE}
-plot((change_shoot_diam/100) ~ change_basal_diam,data=subset(SummaryInd, age>1.4), log="xy",col=col.spp[as.factor(species)], pch=16)
+plot((growth_shoot_diam/100) ~ growth_stem_diam,data=subset(SummaryInd, age>1.4), log="xy",col=col.spp[as.factor(species)], pch=16)
 abline(0,1)
 
-mod <- lm (change_shoot_diam ~ change_basal_diam*age,data=subset(SummaryInd, age>1.4))
+mod <- lm (growth_shoot_diam ~ growth_stem_diam*age,data=subset(SummaryInd, age>1.4))
 summary(mod)
 anova(mod)
 
-plot((change_shoot_diam/100) ~ change_basal_diam,data=subset(SummaryInd, age>1.4), log="xy",col=col.age2[as.factor(age)], pch=16)
+plot((growth_shoot_diam/100) ~ growth_stem_diam,data=subset(SummaryInd, age>1.4), log="xy",col=col.age2[as.factor(age)], pch=16)
 abline(0,1)
 legend("bottomright",col=col.age, labels.age, pch=16, cex=1, bty="n")
 
-plot((change_shoot_area/10000) ~ dia,data=subset(SummaryInd), log="xy",col=col.spp[as.factor(species)], pch=16,ylim=c(0.01,500),cex=.7)
-points((change_basal_area) ~ dia,data=subset(SummaryInd), log="xy",col=col.spp[as.factor(species)], pch=1)
+plot((growth_shoot_area/10000) ~ diameter,data=subset(SummaryInd), log="xy",col=col.spp[as.factor(species)], pch=16,ylim=c(0.01,500),cex=.7)
+points((growth_stem_area) ~ diameter,data=subset(SummaryInd), log="xy",col=col.spp[as.factor(species)], pch=1)
 
-plot((change_shoot_area/10000) ~ dia,data=subset(SummaryInd), log="xy",col=col.age[as.factor(age)], pch=16,ylim=c(0.01,500),cex=.7)
-points((change_basal_area) ~ dia,data=subset(SummaryInd), log="xy",col=col.age[as.factor(age)], pch=1)
+plot((growth_shoot_area/10000) ~ diameter,data=subset(SummaryInd), log="xy",col=col.age[as.factor(age)], pch=16,ylim=c(0.01,500),cex=.7)
+points((growth_stem_area) ~ diameter,data=subset(SummaryInd), log="xy",col=col.age[as.factor(age)], pch=1)
 
-yvar <- "change_shoot_diam"
-xvar <- "change_basal_diam"
+yvar <- "growth_shoot_diam"
+xvar <- "growth_stem_diam"
 
 data <- subset(SummaryInd)
 data <- split(data, data$species)
